# etc-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile.dev  README.md  alembic.ini  env.example  pyproject.toml  requirements.txt  test_file_upload.py  test_system.py
app/: main.py
app/api/: deps.py
app/api/v1/: __init__.py  annotations.py  auth.py  files.py  health.py  pointcloud.py  projects.py  tasks.py  vehicle_types.py
app/core/: config.py  database.py  exceptions.py  security.py
app/models/: __init__.py  annotation.py  base.py  enums.py  notification.py  pointcloud.py  project.py  task.py  user.py  vehicle_type.py
app/schemas/: __init__.py  annotation.py  pointcloud.py  project.py  task.py  user.py
app/services/: __init__.py  annotation.py  auth.py  file_upload.py  project.py  task.py
migrations/: env.py
migrations/versions/: 47789f80b9eb_fix_foreign_key_constraints.py  ac9c1b51c70d_initial_migration.py
